refactor(service):replace older information

--- a/index.html
+++ b/index.html
@@ -238,48 +238,53 @@
               <div class="tabs-content mt-4" id="tabs-panel-profile" tabindex="-1" role="tabpanel"
                 aria-labelledby="tabs-list-profile">
                 <p>
-                  It is a long established fact that a reader will be
-                  distracted by the readable content of a page when looking at
-                  its layout. The point of using Lorem Ipsum is that it has a
-                  more-or-less normal distribution of letters, look like
-                  readable English.
+                  Yitro-Consulting is a multidisciplinary consulting firm specializing in digital marketing, change
+                  management, and web
+                  development. We offer end-to-end support to help organizations grow, transform, and stand out in a
+                  competitive digital
+                  landscape. Our services range from strategic audits and branding to e-learning and custom application
+                  development.
                 </p>
                 <p>
-                  There are many variations of passages of Lorem Ipsum
-                  available, but the majority have in some form, by injected
-                  humour.
+                  Our strength lies in our ability to merge strategy, creativity, and technology into impactful,
+                  measurable solutions.
+                  Backed by a team of passionate experts, we deliver tailor-made strategies that align with your goals
+                  and generate
+                  long-term results. From startups to NGOs, we create real digital value.
                 </p>
               </div>
 
               <div class="tabs-content mt-4" id="tabs-panel-vision" tabindex="-1" role="tabpanel"
                 aria-labelledby="tabs-list-vision">
                 <p>
-                  It is a long established fact that a reader will be
-                  distracted by the readable content of a page when looking at
-                  its layout. The point of using Lorem Ipsum is that it has a
-                  more-or-less normal distribution of letters, look like
-                  readable English.
+                  IWe believe digital transformation is not just about technology—it’s about people, purpose, and
+                  progress. Our vision is
+                  to build a more inclusive and sustainable digital future by helping organizations grow with intention
+                  and impact.
                 </p>
                 <p>
-                  There are many variations of passages of Lorem Ipsum
-                  available, but the majority have in some form, by injected
-                  humour.
+                  At Yitro-Consulting, we envision a world where innovation serves humanity. Through our integrated
+                  approach, we empower
+                  clients to lead change, embrace agility, and make bold decisions that shape tomorrow's digital
+                  economy.
                 </p>
               </div>
 
               <div class="tabs-content mt-4" id="tabs-panel-history" tabindex="-1" role="tabpanel"
                 aria-labelledby="tabs-list-history">
                 <p>
-                  It is a long established fact that a reader will be
-                  distracted by the readable content of a page when looking at
-                  its layout. The point of using Lorem Ipsum is that it has a
-                  more-or-less normal distribution of letters, look like
-                  readable English.
+                  Founded by passionate changemakers, Yitro-Consulting began as a bold idea: to create a consulting firm
+                  that blends tech,
+                  learning, and strategy to drive meaningful impact. What started as a small team has grown into a
+                  full-fledged digital
+                  ecosystem, serving clients across Africa, Europe, and North America.
                 </p>
                 <p>
-                  There are many variations of passages of Lorem Ipsum
-                  available, but the majority have in some form, by injected
-                  humour.
+                  Over the years, we’ve evolved alongside the digital world, expanding our services to meet the
+                  challenges of a constantly
+                  shifting landscape. Today, our journey continues—guided by innovation, strengthened by our values, and
+                  inspired by every
+                  client we serve.
                 </p>
               </div>
             </div>
@@ -307,16 +312,16 @@
             <div class="group hover:-translate-y-1">
               <div
                 class="w-[70px] h-[70px] rounded-2xl mb-6 flex items-center justify-center text-[37px]/none bg-primary text-primary-color">
-                <i class="lni lni-capsule"></i>
+                <i class="lni lni-stats-up"></i>
               </div>
               <div class="w-full">
                 <h4 class="text-[1.25rem]/tight font-semibold mb-5">
-                  Refreshing Design
+                  Digital Marketing
                 </h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptatum dolores autem quidem odit beatae perspiciatis!
-                  Rem.
+                  We design data-driven marketing strategies to boost your visibility and attract qualified leads. From
+                  SEO to Google &
+                  social ads, we tailor every campaign to your goals. Results that matter, growth you can measure.
                 </p>
               </div>
             </div>
@@ -326,16 +331,17 @@
             <div class="group hover:-translate-y-1">
               <div
                 class="w-[70px] h-[70px] rounded-2xl mb-6 flex items-center justify-center text-[37px]/none bg-primary text-primary-color">
-                <i class="lni lni-tailwindcss"></i>
+                <i class="lni lni-code-alt"></i>
               </div>
               <div class="w-full">
                 <h4 class="text-[1.25rem]/tight font-semibold mb-5">
-                  Solid Tailwind CSS
+                  Web & Mobile Development
                 </h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptatum dolores autem quidem odit beatae perspiciatis!
-                  Rem.
+                  We build responsive, secure websites and apps that match your vision and scale with your business.
+                  Whether it’s an
+                  e-commerce, a showcase site, or a mobile app, we deliver high-performance solutions. Smart tech,
+                  beautiful design.
                 </p>
               </div>
             </div>
@@ -345,16 +351,16 @@
             <div class="group hover:-translate-y-1">
               <div
                 class="w-[70px] h-[70px] rounded-2xl mb-6 flex items-center justify-center text-[37px]/none bg-primary text-primary-color">
-                <i class="lni lni-gift"></i>
+                <i class="lni lni-consulting"></i>
               </div>
               <div class="w-full">
                 <h4 class="text-[1.25rem]/tight font-semibold mb-5">
-                  Free and Open-Source
+                  Digital Transformation
                 </h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptatum dolores autem quidem odit beatae perspiciatis!
-                  Rem.
+                  We guide your business through every step of digital transformation—from audits to implementation. Our
+                  human-centered
+                  approach ensures smooth adoption and long-term impact. More than tech, it’s a mindset shift.
                 </p>
               </div>
             </div>
@@ -364,16 +370,16 @@
             <div class="group hover:-translate-y-1">
               <div
                 class="w-[70px] h-[70px] rounded-2xl mb-6 flex items-center justify-center text-[37px]/none bg-primary text-primary-color">
-                <i class="lni lni-layout"></i>
+                <i class="lni lni-graduation"></i>
               </div>
               <div class="w-full">
-                <h4 class="text-[1.25rem]/tight font-semibold mb-5">
-                  Multipurpose Template
+                <h4>
+                  E-learning & Training
                 </h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptatum dolores autem quidem odit beatae perspiciatis!
-                  Rem.
+                  With Yitro Learning, we offer impactful training based on neuroscience and storytelling. Learn faster,
+                  remember longer,
+                  and grow personally or professionally. Flexible learning, lasting change.
                 </p>
               </div>
             </div>
@@ -383,16 +389,16 @@
             <div class="group hover:-translate-y-1">
               <div
                 class="w-[70px] h-[70px] rounded-2xl mb-6 flex items-center justify-center text-[37px]/none bg-primary text-primary-color">
-                <i class="lni lni-layers"></i>
+                <i class="lni lni-users"></i>
               </div>
               <div class="w-full">
                 <h4 class="text-[1.25rem]/tight font-semibold mb-5">
-                  Fully Customizable
+                  Consulting & Change Management
                 </h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptatum dolores autem quidem odit beatae perspiciatis!
-                  Rem.
+                  We help you lead change with clarity and confidence. From team coaching to strategic planning, we
+                  support transformation
+                  at every level. People-focused. Results-driven.
                 </p>
               </div>
             </div>
@@ -402,16 +408,18 @@
             <div class="group hover:-translate-y-1">
               <div
                 class="w-[70px] h-[70px] rounded-2xl mb-6 flex items-center justify-center text-[37px]/none bg-primary text-primary-color">
-                <i class="lni lni-grid-alt"></i>
+                <i class="lni lni-protection"></i>
               </div>
               <div class="w-full">
                 <h4 class="text-[1.25rem]/tight font-semibold mb-5">
-                  All Essential Elements
+                  Legal Consulting
                 </h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptatum dolores autem quidem odit beatae perspiciatis!
-                  Rem.
+                  We provide expert legal consulting to help businesses navigate regulatory, contractual, and compliance
+                  matters. From
+                  company formation to digital policy audits, we ensure your operations are secure and legally sound.
+                  Smart business
+                  starts with solid legal foundations.
                 </p>
               </div>
             </div>
